--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Flask==3.0.3
 Flask-SocketIO==5.3.6
 gunicorn==21.2.0
-gevent==24.2.1
+gevent==23.9.1
+gevent-websocket==0.10.1
 gevent-websocket==0.10.1
