--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Flask==3.0.3
 Flask-SocketIO==5.3.6
-gunicorn==21.2.0
-simple-websocket==1.0.0
+eventlet==0.36.1
+gunicorn==22.0.0
+python-dotenv==1.0.1
