--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-Flask==3.0.3
-Flask-SocketIO==5.3.6
-eventlet>=0.33.3,<0.34
+flask==2.3.3
+flask-socketio==5.3.6
 gunicorn==21.2.0
-python-dotenv==1.0.1
+eventlet==0.33.3
+python-engineio==4.9.0
+python-socketio==5.11.3
