--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 flask==2.3.3
 flask-socketio==5.3.6
 gunicorn==21.2.0
-eventlet==0.33.3
+gevent==23.9.1
+gevent-websocket==0.10.1
 python-engineio==4.9.0
 python-socketio==5.11.3
 greenlet>=2.0.2
